--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "laravel-enso/activitylog": "1.1.*",
+        "boing6002/activitylog": "dev-master",
         "boing6002/core": "dev-master",
-        "laravel-enso/formbuilder": "2.12.*",
-        "laravel-enso/helpers": "1.10.*",
-        "laravel-enso/structuremanager": "2.5.*",
-        "laravel-enso/trackwho": "1.7.*",
-        "laravel-enso/vuedatatable": "1.9.*"
+        "boing6002/formbuilder": "dev-master",
+        "boing6002/helpers": "dev-master",
+        "boing6002/structuremanager": "dev-master",
+        "boing6002/trackwho": "dev-master",
+        "boing6002/vuedatatable": "dev-master"
     },
     "autoload": {
         "psr-4": {
